Update production database configuration for Heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,6 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-
 development:
   <<: *default
   database: cfb25_dynasty_tracker_backend_development
@@ -78,21 +77,27 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+# production:
+#   primary: &primary_production
+#     <<: *default
+#     database: cfb25_dynasty_tracker_backend_production
+#     username: cfb25_dynasty_tracker_backend
+#     password: <%= ENV["CFB25_DYNASTY_TRACKER_BACKEND_DATABASE_PASSWORD"] %>
+#   cache:
+#     <<: *primary_production
+#     database: cfb25_dynasty_tracker_backend_production_cache
+#     migrations_paths: db/cache_migrate
+#   queue:
+#     <<: *primary_production
+#     database: cfb25_dynasty_tracker_backend_production_queue
+#     migrations_paths: db/queue_migrate
+#   cable:
+#     <<: *primary_production
+#     database: cfb25_dynasty_tracker_backend_production_cable
+#     migrations_paths: db/cable_migrate
+
 production:
-  primary: &primary_production
-    <<: *default
-    database: cfb25_dynasty_tracker_backend_production
-    username: cfb25_dynasty_tracker_backend
-    password: <%= ENV["CFB25_DYNASTY_TRACKER_BACKEND_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: cfb25_dynasty_tracker_backend_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: cfb25_dynasty_tracker_backend_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: cfb25_dynasty_tracker_backend_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  database: <%= ENV['DATABASE_URL'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
