--- a/config/database.yml
+++ b/config/database.yml
@@ -101,3 +101,9 @@ production:
   database: <%= ENV['DATABASE_URL'] %>
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
+  cable:
+    adapter: postgresql
+    url: <%= ENV['DATABASE_URL'] %>
+    database: <%= ENV['DATABASE_URL']&.split('/')&.last %>
+    username: <%= ENV['DB_USERNAME'] %>
+    password: <%= ENV['DB_PASSWORD'] %>
