--- a/config/database.yml
+++ b/config/database.yml
@@ -98,12 +98,11 @@ test:
 
 production:
   <<: *default
-  database: <%= ENV['DATABASE_URL'] %>
-  username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
+  primary:
+    database: <%= ENV['DATABASE_URL'] %>
+    username: <%= ENV['DB_USERNAME'] %>
+    password: <%= ENV['DB_PASSWORD'] %>
   cable:
-    adapter: postgresql
-    url: <%= ENV['DATABASE_URL'] %>
-    database: <%= ENV['DATABASE_URL']&.split('/')&.last %>
+    database: <%= ENV['DATABASE_URL'] %>
     username: <%= ENV['DB_USERNAME'] %>
     password: <%= ENV['DB_PASSWORD'] %>
